--- a/ImageHandler/ImageHandler.nuspec
+++ b/ImageHandler/ImageHandler.nuspec
@@ -1,15 +1,16 @@
 <?xml version="1.0"?>
-<package >
+
+<package>
   <metadata>
     <id>$id$</id>
     <version>$version$</version>
     <title>$title$</title>
-    <authors>$author$</authors>
+    <authors>essenius</authors>
     <owners>$author$</owners>
-    <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0</licenseUrl>
+    <license type="expression">Apache-2.0</license>
+    <projectUrl>https://github.com/essenius/FitNesseFitSharpImageHandler</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <copyright>$copyright$</copyright>
-    <tags>ATDD TestAutomation</tags>
   </metadata>
 </package>
