--- a/ImageHandlerTest/ImageHandlerTest.csproj
+++ b/ImageHandlerTest/ImageHandlerTest.csproj
@@ -2,25 +2,28 @@
 
   <PropertyGroup>
     <TargetFrameworks>net5.0;net461</TargetFrameworks>
-
+    <LangVersion>8.0</LangVersion>
+    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
+    <AnalysysMode>AllEnabledByDefault</AnalysysMode>
+    <Version>3.0.1</Version>
+    <Authors>Rik Essenius</Authors>
+    <Description>Test assembly for ImageHandler</Description>
+    <Copyright>Copyright © Rik Essenius 2016-2021</Copyright>
+    <RepositoryUrl>https://github.com/essenius/FitNesseFitSharpImageHandler.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ImageHandler\ImageHandler.csproj" />
+    <PackageReference Include="MSTest.TestAdapter" Version="2.1.2" />
+    <PackageReference Include="MSTest.TestFramework" Version="2.1.2" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net5.0' ">
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
-    <PackageReference Include="MSTest.TestAdapter" Version="2.1.2" />
-    <PackageReference Include="MSTest.TestFramework" Version="2.1.2" />
     <PackageReference Include="coverlet.collector" Version="1.3.0" />
   </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' != 'net5.0' ">
-    <PackageReference Include="MSTest.TestAdapter" Version="2.1.2" />
-    <PackageReference Include="MSTest.TestFramework" Version="2.1.2" />
-  </ItemGroup>
-
 
 </Project>
