--- a/ImageHandler/ImageHandler.csproj
+++ b/ImageHandler/ImageHandler.csproj
@@ -5,7 +5,7 @@
     <LangVersion>8.0</LangVersion>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
     <AnalysysMode>AllEnabledByDefault</AnalysysMode>
-    <Version>3.1.0</Version>
+    <Version>3.2.0</Version>
     <Authors>Rik Essenius</Authors>
     <Description>Support for loading, saving, capturing and displaying images in FitNesse/FitSharp tests</Description>
     <Copyright>Copyright © Rik Essenius 2016-2023</Copyright>
@@ -14,6 +14,7 @@
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageReleaseNotes>$([System.IO.File]::ReadAllText("$(SolutionDir)/ReleaseNotes.txt"))</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
