--- a/ImageHandler/ImageHandler.csproj
+++ b/ImageHandler/ImageHandler.csproj
@@ -1,14 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0;net461</TargetFrameworks>
-    <LangVersion>8.0</LangVersion>
+    <TargetFrameworks>net8.0</TargetFrameworks>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
-    <AnalysysMode>AllEnabledByDefault</AnalysysMode>
-    <Version>3.2.2</Version>
+    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
+    <Version>4.0.0</Version>
     <Authors>Rik Essenius</Authors>
     <Description>Support for loading, saving, capturing and displaying images in FitNesse/FitSharp tests</Description>
-    <Copyright>Copyright © Rik Essenius 2016-2023</Copyright>
+    <Copyright>Copyright © Rik Essenius 2016-2024</Copyright>
     <RepositoryUrl>https://github.com/essenius/FitNesseFitSharpImageHandler.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
@@ -20,8 +19,13 @@
   <ItemGroup>
     <None Include="..\README.md" Pack="true" PackagePath="" />
   </ItemGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net6.0' ">
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net8.0' ">
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>ImageHandlerTest</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
 </Project>
