--- a/ImageHandlerTest/ImageHandlerTest.csproj
+++ b/ImageHandlerTest/ImageHandlerTest.csproj
@@ -1,14 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0;net461</TargetFrameworks>
-    <LangVersion>8.0</LangVersion>
+    <TargetFramework>net8.0</TargetFramework>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
-    <AnalysysMode>AllEnabledByDefault</AnalysysMode>
-    <Version>3.2.2</Version>
+    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
+    <Version>4.0.0</Version>
     <Authors>Rik Essenius</Authors>
     <Description>Test assembly for ImageHandler</Description>
-    <Copyright>Copyright © Rik Essenius 2016-2023</Copyright>
+    <Copyright>Copyright © Rik Essenius 2016-2024</Copyright>
     <RepositoryUrl>https://github.com/essenius/FitNesseFitSharpImageHandler.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
@@ -17,13 +16,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ImageHandler\ImageHandler.csproj" />
-    <PackageReference Include="MSTest.TestAdapter" Version="2.1.2" />
-    <PackageReference Include="MSTest.TestFramework" Version="2.1.2" />
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net6.0' ">
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.1" />
-    <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="MSTest.TestAdapter" Version="3.7.0" />
+    <PackageReference Include="MSTest.TestFramework" Version="3.7.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+    <PackageReference Include="coverlet.collector" Version="6.0.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -46,6 +42,12 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="4pixel.bmp">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="wpf demo screenshot 1.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="wpf demo screenshot 2.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
