--- a/ImageHandlerTest/ImageHandlerTest.csproj
+++ b/ImageHandlerTest/ImageHandlerTest.csproj
@@ -4,10 +4,10 @@
     <TargetFramework>net8.0</TargetFramework>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
     <AnalysisMode>AllEnabledByDefault</AnalysisMode>
-    <Version>4.0.0</Version>
+    <Version>4.0.1</Version>
     <Authors>Rik Essenius</Authors>
     <Description>Test assembly for ImageHandler</Description>
-    <Copyright>Copyright © Rik Essenius 2016-2024</Copyright>
+    <Copyright>Copyright © Rik Essenius 2016-2025</Copyright>
     <RepositoryUrl>https://github.com/essenius/FitNesseFitSharpImageHandler.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
@@ -16,10 +16,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ImageHandler\ImageHandler.csproj" />
-    <PackageReference Include="MSTest.TestAdapter" Version="3.7.0" />
-    <PackageReference Include="MSTest.TestFramework" Version="3.7.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
-    <PackageReference Include="coverlet.collector" Version="6.0.2" />
+    <PackageReference Include="MSTest.TestAdapter" Version="3.8.0" />
+    <PackageReference Include="MSTest.TestFramework" Version="3.8.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+    <PackageReference Include="coverlet.collector" Version="6.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
